[Modifications] Functional without notifications

--- a/compose.yml
+++ b/compose.yml
@@ -3,10 +3,11 @@ services:
     build: .
     container_name: ${CONTAINER_NAME:-nas-photo-bot}
     env_file:
-      - .env  # Este archivo sobreescribe las variables de .env
+      - .env
     environment:
       TELEGRAM_BOT_TOKEN: ${TELEGRAM_BOT_TOKEN}
       TELEGRAM_USER_ID: ${TELEGRAM_USER_ID}
+      TZ: Europe/Madrid  # AÑADIR ESTA LÍNEA
     volumes:
       - ${HOST_DATA_PATH}:${DATA_PATH:-/data/fotos}
     restart: unless-stopped
