--- a/bot/requirements.txt
+++ b/bot/requirements.txt
@@ -1,5 +1,6 @@
+# Dependencias esenciales
 python-telegram-bot==20.8
 APScheduler==3.10.4
 Pillow==10.1.0
-opencv-python-headless==4.8.1.78
-numpy==1.24.4
+
+# OpenCV opcional (se instala desde Dockerfile con fallback)
