--- a/web/apache-config.conf
+++ b/web/apache-config.conf
@@ -1,9 +1,9 @@
-# web/apache-config.conf
+# web/apache-config.conf (Actualizado para nueva estructura)
 <VirtualHost *:80>
     ServerAdmin webmaster@localhost
     DocumentRoot /var/www/html
 
-    # Permitir acceso a todos los archivos
+    # Configuración del directorio principal
     <Directory /var/www/html>
         Options Indexes FollowSymLinks
         AllowOverride All
@@ -13,6 +13,9 @@
         Header always set Access-Control-Allow-Origin "*"
         Header always set Access-Control-Allow-Methods "GET, POST, OPTIONS"
         Header always set Access-Control-Allow-Headers "Content-Type"
+
+        # Configurar índices personalizados
+        DirectoryIndex index.html index.php
     </Directory>
 
     # Configurar acceso a las fotos
@@ -20,16 +23,85 @@
         Options Indexes FollowSymLinks
         AllowOverride None
         Require all granted
+
+        # Prevenir ejecución de scripts en directorio de fotos
+        <FilesMatch "\.(php|phtml|php3|php4|php5|pl|py|jsp|asp|sh|cgi)$">
+            Require all denied
+        </FilesMatch>
+    </Directory>
+
+    # Configuración específica para assets
+    <Directory /var/www/html/assets>
+        Options -Indexes
+        AllowOverride None
+        Require all granted
+
+        # Cache largo para assets estáticos
+        <FilesMatch "\.(css|js|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$">
+            ExpiresActive On
+            ExpiresDefault "access plus 1 year"
+            Header set Cache-Control "public, max-age=31536000, immutable"
+        </FilesMatch>
+    </Directory>
+
+    # Configuración para APIs
+    <Directory /var/www/html/api>
+        Options -Indexes
+        AllowOverride None
+        Require all granted
+
+        # Sin cache para APIs
+        <FilesMatch "\.php$">
+            Header set Cache-Control "no-cache, no-store, must-revalidate"
+            Header set Pragma "no-cache"
+            Header set Expires "0"
+        </FilesMatch>
+
+        # Proteger archivos de configuración
+        <Files "config.php">
+            Require all granted
+        </Files>
+
+        # Proteger documentación en producción (opcional)
+        <Directory /var/www/html/api/docs>
+            # Require all denied  # Descomentar para producción
+            Require all granted   # Permitir para desarrollo
+        </Directory>
     </Directory>
 
     # Alias para acceder a las fotos
     Alias /photos /data/fotos
 
-    # Rewrite rules para la API
-    RewriteEngine On
-    RewriteRule ^api/photos/([0-9]{4})/([0-9]{2})/([0-9]{2})/?$ /api/photos.php?year=$1&month=$2&day=$3 [L,QSA]
+    # Configuración de seguridad
+    ServerTokens Prod
+    ServerSignature Off
 
     # Logs
     ErrorLog ${APACHE_LOG_DIR}/error.log
     CustomLog ${APACHE_LOG_DIR}/access.log combined
+
+    # Logs específicos para APIs (útil para debugging)
+    CustomLog ${APACHE_LOG_DIR}/api_access.log combined env=api_request
+    SetEnvIf Request_URI "^/api/" api_request
+
+    # Configuración adicional de seguridad
+    <IfModule mod_headers.c>
+        # Seguridad básica
+        Header always set X-Content-Type-Options nosniff
+        Header always set X-Frame-Options DENY
+        Header always set X-XSS-Protection "1; mode=block"
+        Header always set Referrer-Policy "strict-origin-when-cross-origin"
+
+        # CSP básico (ajustar según necesidades)
+        Header always set Content-Security-Policy "default-src 'self'; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline'; img-src 'self' data:; font-src 'self' data:;"
+    </IfModule>
+
+    # Configuración de compresión
+    <IfModule mod_deflate.c>
+        SetOutputFilter DEFLATE
+        SetEnvIfNoCase Request_URI \
+            \.(?:gif|jpe?g|png|ico)$ no-gzip dont-vary
+        SetEnvIfNoCase Request_URI \
+            \.(?:exe|t?gz|zip|bz2|sit|rar)$ no-gzip dont-vary
+    </IfModule>
 </VirtualHost>
