--- a/web/.htaccess
+++ b/web/.htaccess
@@ -1,4 +1,4 @@
-# web/.htaccess
+# web/.htaccess (Actualizado para nueva estructura)
 RewriteEngine On
 
 # Headers CORS
@@ -6,56 +6,57 @@ Header always set Access-Control-Allow-Origin "*"
 Header always set Access-Control-Allow-Methods "GET, POST, OPTIONS"
 Header always set Access-Control-Allow-Headers "Content-Type"
 
-# API Routes - Rutas amigables para las APIs
+# API Routes - Rutas amigables para las APIs (actualizadas para /routes/)
 
 # API de fotos por fecha específica
-RewriteRule ^api/photos/([0-9]{4})/([0-9]{2})/([0-9]{2})/?$ /api/photos.php?year=$1&month=$2&day=$3 [L,QSA]
+RewriteRule ^api/photos/([0-9]{4})/([0-9]{2})/([0-9]{2})/?$ /api/routes/photos.php?year=$1&month=$2&day=$3 [L,QSA]
 
 # API de búsqueda y filtrado
-RewriteRule ^api/search/?$ /api/search.php [L,QSA]
+RewriteRule ^api/search/?$ /api/routes/search.php [L,QSA]
 
 # API de estadísticas
-RewriteRule ^api/stats/?$ /api/stats.php [L,QSA]
+RewriteRule ^api/stats/?$ /api/routes/stats.php [L,QSA]
 
 # API de fechas disponibles
-RewriteRule ^api/dates/?$ /api/dates.php [L,QSA]
+RewriteRule ^api/dates/?$ /api/routes/dates.php [L,QSA]
 
 # API de exportación
-RewriteRule ^api/export/?$ /api/export.php [L,QSA]
+RewriteRule ^api/export/?$ /api/routes/export.php [L,QSA]
 
 # API de contenido aleatorio
-RewriteRule ^api/random/?$ /api/random.php [L,QSA]
+RewriteRule ^api/random/?$ /api/routes/random.php [L,QSA]
 
 # API de calendario
-RewriteRule ^api/calendar/?$ /api/calendar.php [L,QSA]
-RewriteRule ^api/calendar/([0-9]{4})/([0-9]{1,2})/?$ /api/calendar.php?year=$1&month=$2 [L,QSA]
+RewriteRule ^api/calendar/?$ /api/routes/calendar.php [L,QSA]
+RewriteRule ^api/calendar/([0-9]{4})/([0-9]{1,2})/?$ /api/routes/calendar.php?year=$1&month=$2 [L,QSA]
 
 # API de feed principal
-RewriteRule ^api/feed/?$ /api/feed.php [L,QSA]
+RewriteRule ^api/feed/?$ /api/routes/feed.php [L,QSA]
 
 # Rutas adicionales para funcionalidades específicas
 
 # Exportar por tipo y fecha
-RewriteRule ^api/export/day/([0-9]{4}-[0-9]{2}-[0-9]{2})/?$ /api/export.php?type=day&date=$1 [L,QSA]
-RewriteRule ^api/export/week/([0-9]{4}-[0-9]{2}-[0-9]{2})/?$ /api/export.php?type=week&date=$1 [L,QSA]
-RewriteRule ^api/export/month/([0-9]{4}-[0-9]{2})/?$ /api/export.php?type=month&month=$1 [L,QSA]
+RewriteRule ^api/export/day/([0-9]{4}-[0-9]{2}-[0-9]{2})/?$ /api/routes/export.php?type=day&date=$1 [L,QSA]
+RewriteRule ^api/export/week/([0-9]{4}-[0-9]{2}-[0-9]{2})/?$ /api/routes/export.php?type=week&date=$1 [L,QSA]
+RewriteRule ^api/export/month/([0-9]{4}-[0-9]{2})/?$ /api/routes/export.php?type=month&month=$1 [L,QSA]
 
 # Estadísticas por período
-RewriteRule ^api/stats/([0-9]{4})/([0-9]{2})/?$ /api/stats.php?start_date=$1-$2-01&end_date=$1-$2-31 [L,QSA]
-RewriteRule ^api/stats/([0-9]{4})/?$ /api/stats.php?start_date=$1-01-01&end_date=$1-12-31 [L,QSA]
+RewriteRule ^api/stats/([0-9]{4})/([0-9]{2})/?$ /api/routes/stats.php?start_date=$1-$2-01&end_date=$1-$2-31 [L,QSA]
+RewriteRule ^api/stats/([0-9]{4})/?$ /api/routes/stats.php?start_date=$1-01-01&end_date=$1-12-31 [L,QSA]
 
 # Búsqueda por año/mes/día
-RewriteRule ^api/search/([0-9]{4})/?$ /api/search.php?year=$1 [L,QSA]
-RewriteRule ^api/search/([0-9]{4})/([0-9]{2})/?$ /api/search.php?year=$1&month=$2 [L,QSA]
-RewriteRule ^api/search/([0-9]{4})/([0-9]{2})/([0-9]{2})/?$ /api/search.php?year=$1&month=$2&day=$3 [L,QSA]
+RewriteRule ^api/search/([0-9]{4})/?$ /api/routes/search.php?year=$1 [L,QSA]
+RewriteRule ^api/search/([0-9]{4})/([0-9]{2})/?$ /api/routes/search.php?year=$1&month=$2 [L,QSA]
+RewriteRule ^api/search/([0-9]{4})/([0-9]{2})/([0-9]{2})/?$ /api/routes/search.php?year=$1&month=$2&day=$3 [L,QSA]
 
 # Random por tipo
-RewriteRule ^api/random/photos/?$ /api/random.php?type=photo [L,QSA]
-RewriteRule ^api/random/videos/?$ /api/random.php?type=video [L,QSA]
+RewriteRule ^api/random/photos/?$ /api/routes/random.php?type=photo [L,QSA]
+RewriteRule ^api/random/videos/?$ /api/routes/random.php?type=video [L,QSA]
 
 # Headers de cache para archivos estáticos
-<FilesMatch "\.(css|js|png|jpg|jpeg|gif|ico|svg)$">
+<FilesMatch "\.(css|js|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$">
     Header set Cache-Control "max-age=31536000, public"
+    Header set Expires "Thu, 31 Dec 2037 23:55:55 GMT"
 </FilesMatch>
 
 # Headers de cache para APIs (no cache)
@@ -64,6 +65,19 @@ RewriteRule ^api/random/videos/?$ /api/random.php?type=video [L,QSA]
     Header set Pragma "no-cache"
     Header set Expires "0"
 </FilesMatch>
+
+# Comprimir archivos estáticos
+<IfModule mod_deflate.c>
+    AddOutputFilterByType DEFLATE text/plain
+    AddOutputFilterByType DEFLATE text/html
+    AddOutputFilterByType DEFLATE text/xml
+    AddOutputFilterByType DEFLATE text/css
+    AddOutputFilterByType DEFLATE application/xml
+    AddOutputFilterByType DEFLATE application/xhtml+xml
+    AddOutputFilterByType DEFLATE application/rss+xml
+    AddOutputFilterByType DEFLATE application/javascript
+    AddOutputFilterByType DEFLATE application/x-javascript
+</IfModule>
 
 # Seguridad - Evitar acceso directo a archivos sensibles
 <Files "*.json">
@@ -76,5 +90,10 @@ RewriteRule ^api/random/videos/?$ /api/random.php?type=video [L,QSA]
     Deny from all
 </Files>
 
+<Files "*.md">
+    Order allow,deny
+    Deny from all
+</Files>
+
 # Página de error personalizada para APIs
-ErrorDocument 404 /api/error.php
+ErrorDocument 404 /api/routes/error.php
