--- a/web/apache-config.conf
+++ b/web/apache-config.conf
@@ -1,4 +1,4 @@
-# web/apache-config.conf (Actualizado para nueva estructura)
+# web/apache-config.conf (FIXED - No nested Directory directives)
 <VirtualHost *:80>
     ServerAdmin webmaster@localhost
     DocumentRoot /var/www/html
@@ -37,11 +37,13 @@
         Require all granted
 
         # Cache largo para assets estáticos
-        <FilesMatch "\.(css|js|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$">
-            ExpiresActive On
-            ExpiresDefault "access plus 1 year"
-            Header set Cache-Control "public, max-age=31536000, immutable"
-        </FilesMatch>
+        <IfModule mod_expires.c>
+            <FilesMatch "\.(css|js|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$">
+                ExpiresActive On
+                ExpiresDefault "access plus 1 year"
+                Header set Cache-Control "public, max-age=31536000, immutable"
+            </FilesMatch>
+        </IfModule>
     </Directory>
 
     # Configuración para APIs
@@ -61,12 +63,12 @@
         <Files "config.php">
             Require all granted
         </Files>
+    </Directory>
 
-        # Proteger documentación en producción (opcional)
-        <Directory /var/www/html/api/docs>
-            # Require all denied  # Descomentar para producción
-            Require all granted   # Permitir para desarrollo
-        </Directory>
+    # MOVED: Configuración para documentación (fuera del directorio api)
+    <Directory /var/www/html/api/docs>
+        # Require all denied  # Descomentar para producción
+        Require all granted   # Permitir para desarrollo
     </Directory>
 
     # Alias para acceder a las fotos
