--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,64 +1,69 @@
-# web/Dockerfile (Actualizado para nueva estructura)
-FROM php:8.2-apache
+# web/Dockerfile - Optimizado para NAS con poca RAM
+FROM php:8.1-apache
 
-# Instalar extensiones necesarias
+# Instalar solo extensiones esenciales
 RUN apt-get update && apt-get install -y \
     libzip-dev \
     zip \
     unzip \
-    inotify-tools \
+    --no-install-recommends \
     && docker-php-ext-install zip \
+    && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
 # Habilitar módulos necesarios para Apache
-RUN a2enmod rewrite
-RUN a2enmod headers
-RUN a2enmod expires
+RUN a2enmod rewrite \
+    && a2enmod headers \
+    && a2enmod expires
 
-# Configurar Apache para ejecutarse como www-data
-RUN sed -i 's/User .*/User www-data/' /etc/apache2/apache2.conf
-RUN sed -i 's/Group .*/Group www-data/' /etc/apache2/apache2.conf
+# Configurar Apache para usar menos memoria
+RUN sed -i 's/User .*/User www-data/' /etc/apache2/apache2.conf \
+    && sed -i 's/Group .*/Group www-data/' /etc/apache2/apache2.conf
+
+# Configuración optimizada de Apache para NAS
+RUN echo "ServerLimit 2" >> /etc/apache2/apache2.conf \
+    && echo "MaxRequestWorkers 8" >> /etc/apache2/apache2.conf \
+    && echo "ThreadsPerChild 4" >> /etc/apache2/apache2.conf
+
+# Configurar PHP para usar menos memoria
+RUN echo "memory_limit = 128M" >> /usr/local/etc/php/conf.d/docker-php-ram-limit.ini \
+    && echo "upload_max_filesize = 20M" >> /usr/local/etc/php/conf.d/docker-php-ram-limit.ini \
+    && echo "post_max_size = 20M" >> /usr/local/etc/php/conf.d/docker-php-ram-limit.ini \
+    && echo "max_execution_time = 60" >> /usr/local/etc/php/conf.d/docker-php-ram-limit.ini \
+    && echo "max_input_time = 60" >> /usr/local/etc/php/conf.d/docker-php-ram-limit.ini
 
 # Configurar Apache
 COPY apache-config.conf /etc/apache2/sites-available/000-default.conf
 
-# Copiar archivos de la aplicación con nueva estructura
+# Copiar archivos de la aplicación
 COPY public/ /var/www/html/
 COPY .htaccess /var/www/html/
 COPY api/ /var/www/html/api/
 
-# Establecer permisos correctos para los archivos web
-RUN chown -R www-data:www-data /var/www/html
-RUN chmod -R 755 /var/www/html
+# Establecer permisos correctos
+RUN chown -R www-data:www-data /var/www/html \
+    && chmod -R 755 /var/www/html
 
-# Crear directorio de fotos con permisos correctos
-RUN mkdir -p /data/fotos
-RUN chown -R www-data:www-data /data/fotos
-RUN chmod -R 775 /data/fotos
+# Crear directorio de fotos
+RUN mkdir -p /data/fotos \
+    && chown -R www-data:www-data /data/fotos \
+    && chmod -R 775 /data/fotos
 
-# Configurar directorio temporal con permisos correctos
-RUN mkdir -p /tmp/apache-tmp
-RUN chown -R www-data:www-data /tmp/apache-tmp
-
-# Script para ajustar permisos al iniciar
+# Script de inicio optimizado
 COPY entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
 
-# Instalar gosu para cambiar de usuario de forma segura
-RUN apt-get update && apt-get install -y gosu && rm -rf /var/lib/apt/lists/*
-
 # Configurar variables de entorno para Apache
-ENV APACHE_RUN_USER=www-data
-ENV APACHE_RUN_GROUP=www-data
-ENV APACHE_LOG_DIR=/var/log/apache2
-ENV APACHE_LOCK_DIR=/var/lock/apache2
-ENV APACHE_PID_FILE=/var/run/apache2/apache2.pid
+ENV APACHE_RUN_USER=www-data \
+    APACHE_RUN_GROUP=www-data \
+    APACHE_LOG_DIR=/var/log/apache2 \
+    APACHE_LOCK_DIR=/var/lock/apache2 \
+    APACHE_PID_FILE=/var/run/apache2/apache2.pid
 
-# Crear directorios necesarios para Apache
-RUN mkdir -p /var/run/apache2 /var/lock/apache2 /var/log/apache2
-RUN chown -R www-data:www-data /var/run/apache2 /var/lock/apache2 /var/log/apache2
+# Crear directorios necesarios
+RUN mkdir -p /var/run/apache2 /var/lock/apache2 /var/log/apache2 \
+    && chown -R www-data:www-data /var/run/apache2 /var/lock/apache2 /var/log/apache2
 
-# Exponer puerto 80
 EXPOSE 80
 
 CMD ["/entrypoint.sh"]
