--- a/bot-project/docker-compose.yml
+++ b/bot-project/docker-compose.yml
@@ -1,4 +1,4 @@
-# bot-project/docker-compose.yml - Solo Bot de Telegram para Container Manager
+# bot-project/docker-compose.yml - CORREGIDO para Synology NAS
 version: '3.8'
 
 services:
@@ -11,22 +11,15 @@ services:
       TELEGRAM_BOT_TOKEN: ${TELEGRAM_BOT_TOKEN}
       TELEGRAM_USER_ID: ${TELEGRAM_USER_ID}
       TZ: ${TZ:-Europe/Madrid}
-      UMASK: "002"
+      DATA_PATH: ${DATA_PATH:-/data/fotos}
     volumes:
       - ${HOST_DATA_PATH}:${DATA_PATH:-/data/fotos}
     restart: unless-stopped
 
-    # Optimización para NAS Synology
-    deploy:
-      resources:
-        limits:
-          memory: ${BOT_MEMORY_LIMIT:-256M}
-          cpus: '${BOT_CPU_LIMIT:-0.5}'
-        reservations:
-          memory: 128M
-          cpus: '0.2'
+    # ELIMINADO: deploy/resources (causa el error en Synology NAS)
+    # Los NAS Synology no soportan cgroup scheduler
 
-    # Logging optimizado para NAS
+    # Logging optimizado para NAS (esto sí funciona)
     logging:
       driver: "json-file"
       options:
@@ -36,9 +29,9 @@ services:
     # Red simple para Container Manager
     network_mode: bridge
 
-    # Health check para Container Manager UI
+    # Health check simplificado para Container Manager
     healthcheck:
-      test: ["CMD", "python", "-c", "import sys; sys.exit(0)"]
+      test: ["CMD-SHELL", "python -c 'import os; exit(0 if os.path.exists(\"/tmp/bot_running\") else 1)'"]
       interval: 60s
       timeout: 10s
       retries: 3
